# gl-sdk-gitbook

./: .gitignore  DOCUMENTATION.md  README.md  context7.json
gitbook/: .gitbook.yaml  README.md  SUMMARY.md
gitbook/.gitbook/assets/: .pre-commit-config.yaml  README.md  docker-compose.yml  docx-example.docx  final_results_detail_case_gangguan_correctness.csv  glchat_qa_sample_dataset.csv  indexer (1).py  indexer.py  main.py  pyproject.toml  run.py
gitbook/.gitbook/includes/: coming-soon.md  consolecreds.md  detected-entities-p....md  extend-first-rag.md  features.md  gl-connector-connectors-th....md  glconnector-limitations.md  how-to-use-this-guide.md  installation-you-can-use-a....md  note-that-we-are-currently-....md  s.md  set-up-your-openai_api_key.md  (+11 more)
gitbook/archive/: architecture.md
gitbook/common-modules/: introduction-to-common-modules.md
gitbook/for-developers/: contributing.md
gitbook/gen-ai-sdk/: getting-started.md  introduction-to-gen-ai-sdk.md  prerequisites.md
gitbook/gl-ai-agent-package/: introduction-to-gl-aip.md  prerequisites.md
gitbook/gl-browser-use/: getting-started.md  introduction.md  prerequisites.md
gitbook/gl-computer-use/: getting-started.md  introduction.md  prerequisites.md
gitbook/gl-connectors/: getting-started.md  glossary.md  prerequisites.md  terminology.md
gitbook/gl-deep-researcher/: backup-design-pattern.md  getting-started.md  introduction.md  prerequisites.md
gitbook/gl-identity-and-access-management/: getting-started.md  introduction-to-gl-iam.md  prerequisites.md  terminology.md
gitbook/gl-meemo/: getting-started.md  introduction-to-meemo.md  prerequisites.md
gitbook/gl-observability/: getting-started-1.md  getting-started.md  observability.md
gitbook/gl-open-deepresearch/: getting-started.md  introduction-to-gl-open-deepresearch.md  prerequisites.md
gitbook/gl-runner/: introduction-to-gl-runner.md  prerequisites.md
gitbook/gl-smart-crawl/: getting-started.md  introduction.md  prerequisites.md
gitbook/gl-smart-search/: getting-started.md  introduction.md  prerequisites.md
gitbook/gl-speech/: getting-started.md  introduction-to-gl-speech.md  prerequisites.md
gitbook/overview/: component-list.md  documentation-guide.md  gl-sdk-package-installation.md  readme.md  why-gl-sdk.md
(+611 files in other folders)
